--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <html>
   <body>
-<<<<<<< HEAD
-        ayo hello world! What a beautiful day huh? Bro this course is so tidious
-=======
-        ayo hello world! What a beautiful day huh. I'm tired af
->>>>>>> ourbranch
+        ayo hello world! What a beautiful day huh? Bro this course is so tidious. I'm tired af
   </body>
 </html>
