--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
+    <h1>LUNCH!!!</h1>
         ayo hello world! What a beautiful day huh? Bro this course is so tidious. I'm tired af
+    <img src="s11.jpg">
   </body>
 </html>
