--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <h1>LUNCH!!!</h1>
         ayo hello world! What a beautiful day huh? Bro this course is so tidious. I'm tired af
-    <img src="s11.jpg">
+    <br>
+    <img src="s11.jpg" width="300">
   </body>
 </html>
